01-hackathon-starter/01-mongodb-standalone-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc
  namespace: hackathon-starter
  labels:
    app: database
spec:
  ports:
    - port: 27017
      name: mongodb
      protocol: TCP
  clusterIP: None
  selector:
    app: database

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc-connect
  namespace: hackathon-starter
  labels:
    app: database
spec:
  ports:
    - port: 27017
      name: mongodb
      protocol: TCP
  selector:
    app: database
    statefulset.kubernetes.io/pod-name: mongodb-standalone-0

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-standalone
  namespace: hackathon-starter
spec:
  serviceName: mongodb-svc
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
        selector: mongodb
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mongodb
          image: mongo:4.4.5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          livenessProbe:
            exec:
              command:
                - mongo
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 5
            periodSeconds: 60
            timeoutSeconds: 10
          readinessProbe:
            exec:
              command:
                - mongo
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 5
            periodSeconds: 60
            timeoutSeconds: 10
          volumeMounts:
            - name: mongodb-data
              mountPath: /data/db
          resources:
            limits:
              cpu: "200m"
              memory: "512Mi"
            requests:
              cpu: "10m"
              memory: "128Mi"
  volumeClaimTemplates:
    - metadata:
        name: mongodb-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "managed-nfs-storage"
        resources:
          requests:
            storage: 1Gi
